# Advanced_DeepLearning

./: .gitignore  README.md  main.py  pyproject.toml
TP_3/: TP3.ipynb  class_model_gnn.py  message_passing.py
TP_4/: TP4.ipynb  last_layer.py  utils.py
