[project]
name = "11-dlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib==3.8.4",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "peft>=0.18.1",
    "torch>=2.10.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.25.0",
]
